--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/fix-my-db-web/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fix-my-db-web/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fix My DB </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
